refactor: isolate greeting to function

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
     "autoload": {
         "psr-4": {
             "BrainGames\\": "src/"
-        }
+        },
+        "files": [
+            "src/Cli.php"
+        ]
     },
     "authors": [
         {
