--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,34 @@
 {
-    "name": "kolotov/brain-game",
-    "description": "Hexlet study project Brain Games",
-    "type": "project",
-    "autoload": {
-        "psr-4": {
-            "BrainGames\\": "src/"
-        },
-        "files": [
-            "src/Cli.php"
-        ]
+  "name": "kolotov/brain-game",
+  "description": "Hexlet study project Brain Games",
+  "type": "project",
+  "autoload": {
+    "psr-4": {
+      "BrainGames\\": "src/"
     },
-    "authors": [
-        {
-            "name": "Georgii Kolotov",
-            "email": "gkolotov.adv@gmail.com"
-        }
-    ],
-    "require": {
-        "wp-cli/php-cli-tools": "^0.11.19"
-    },
-    "bin": [
-        "bin/brain-games"
-    ],
-    "license": "MIT",
-    "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7"
+    "files": [
+      "src/BrainGame.php",
+      "src/Cli.php",
+      "src/Modules/EvenGame/Module.php",
+      "src/Utils/ConfigUtils.php",
+      "src/Utils/ModuleUtils.php"
+    ]
+  },
+  "authors": [
+    {
+      "name": "Georgii Kolotov",
+      "email": "gkolotov.adv@gmail.com"
     }
+  ],
+  "require": {
+    "wp-cli/php-cli-tools": "^0.11.19"
+  },
+  "bin": [
+    "bin/brain-games",
+    "bin/brain-even"
+  ],
+  "license": "MIT",
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.7"
+  }
 }
