--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     }
   ],
   "require": {
-    "wp-cli/php-cli-tools": "^0.11.19"
+    "wp-cli/php-cli-tools": "^0.11.19",
+    "ext-gmp": "*"
   },
   "bin": [
     "bin/brain-games",
