fix: name project in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kolotov/brain-game",
+  "name": "hexlet/code",
   "description": "Hexlet study project Brain Games",
   "type": "project",
   "autoload": {
