--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     }
   ],
   "require": {
-    "wp-cli/php-cli-tools": "^0.11.19",
-    "ext-gmp": "*"
+    "wp-cli/php-cli-tools": "^0.11.19"
   },
   "bin": [
     "bin/brain-games",
