fix: add binary for games in composer

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
   "bin": [
     "bin/brain-games",
     "bin/brain-even",
-    "bin/brain-calc"
+    "bin/brain-calc",
+    "bin/brain-gcd",
+    "bin/brain-prime",
+    "bin/brain-progression"
   ],
   "license": "MIT",
   "require-dev": {
